<resources>
    <string name="app_name">Transposer</string>
    <string name="scales">Scales</string>
    <string name="favourites">Favourites</string>
    <string name="menu_image">menu image</string>
    <string name="cloud">Cloud</string>
    <string name="refresh">Refresh</string>
    <string name="add_button">Add button</string>
    <string name="settings">Settings</string>
    <string name="scale_logo">scale logo</string>
    <string name="scale_name">Scale name</string>
    <string name="values">Values :</string>
    <string name="values_to_replace">Values to replace</string>
    <string name="start_scale">Start scale</string>
    <string name="back_button">back button</string>
    <string name="scale">Scale :</string>
    <string name="instrument">Instrument</string>
    <string name="end_instrument">End instrument</string>
    <string name="end_scale">End scale</string>
    <string name="transpositions">Transpositions</string>
    <string name="send_to_a_contact">Send to a contact</string>
    <string name="transposition_s_name">Transposition\'s name</string>
    <string name="delete_transposition">Delete transposition</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="transposition_has_been_deleted">Transposition has been deleted</string>
    <string name="transposition_removed_from_favourite">Transposition removed from the favourites</string>
    <string name="transposition_added_to_favourite">Transposition added to the favourites</string>
    <string name="create_transposition">Create transposition</string>
    <string name="start_instrument">Start instrument</string>
    <string name="choose_a_scale">Choose a Scale</string>
    <string name="previous_step">previous_step</string>
    <string name="next_step">next_step</string>
    <string name="save_transposition">Save transposition</string>
    <string name="initial_partition">Initial partition:</string>
    <string name="final_partition">Final partition:</string>
    <string name="final_instrument">Final instrument:</string>
    <string name="initial_instrument">Initial instrument:</string>
    <string name="the_message_has_been_sent">The message has been sent</string>
    <string name="the_message_cannot_be_sent">The message cannot be sent</string>
    <string name="profile_picture">Profile picture</string>
    <string name="username">Username</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="save">Save</string>
    <string name="changes_applied_successfully">Changes applied successfully!</string>
    <string name="share_online">Share online</string>
    <string name="error">An error occurred</string>
    <string name="transposition_shared">Transposition has been shared</string>
    <string name="save_locally">Save locally</string>
    <string name="saved_locally">Saved locally</string>
    <string name="a_title_must_be_set_correctly">A title must be set correctly !</string>
    <string name="specify_the_name_of_the_new_transposition">Specify the name of the new transposition</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="remove_from_favourites">Remove from favourites</string>
</resources>
